--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         .navbar:hover .Photography:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.22rem solid rgb(0, 157, 255);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
@@ -200,7 +200,7 @@
         .navbar:hover .Sport:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.22rem solid rgb(0, 157, 255);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
@@ -276,7 +276,7 @@
         .navbar:hover .Education:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.22rem solid rgb(0, 157, 255);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
@@ -353,7 +353,7 @@
         .navbar:hover .Promoter:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.22rem solid rgb(0, 157, 255);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
@@ -429,7 +429,7 @@
         .navbar:hover .Contact:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.22rem solid rgb(0, 157, 255);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
@@ -506,7 +506,7 @@
         .navbar:hover .Community:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.22rem solid rgb(0, 157, 255);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
@@ -583,7 +583,7 @@
         .navbar:hover .TikiYiki:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.22rem solid rgb(0, 157, 255);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
@@ -662,7 +662,7 @@
         .navbar:hover .Disability:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.22rem solid rgb(0, 157, 255);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
