--- a/index.html
+++ b/index.html
@@ -5665,7 +5665,7 @@ Friends from France
         <br>
         <b style="color: greenyellow; font-size: 11.5px; font-family: helvetica; color: lightsalmon"> Webmaster: Gabriel C. Disability Rights Activist <em style="color: blueviolet; font-family: 'arial'; font-size: 11.25x;">[ Looking for a job on editing web pages, contents and static websites ]</em></b>
         <br>
-        <a href= "mailto:compaorebiga@gmail.com" style="color: yellow; font-family: 'Merienda'; font-size: 12px;">Send Message</a>
+        <a href= "mailto:compaorebiga@gmail.com" style="color: yellow; font-family: 'arial'; font-size: 13px;">Send Message</a>
         <br>
     </div>
 
