--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background-color: rgba(248, 248, 248, 0.838);
+            background-color: rgba(250, 250, 250, 0.958);
             justify-content: center;
             align-items: center;
         }
@@ -1380,16 +1380,19 @@
 
         .kw-container {
             position: relative;
+            justify-content: center;
+            align-items: center;
             overflow: hidden;
             width: 750px;
             height: 440px;
-            background: #ed8647ee;
+            background: transparent;
             color: #000;
+            margin-top: -1.5rem;
         }
 
         .k img {
             width: 750px;
-            height: 440px;
+            height: auto;
             animation: auto 15s infinite linear;
             animation-delay: 5s;
             position: absolute;
@@ -1424,7 +1427,7 @@
 
         .k1 img {
             width: 750px;
-            height: 440px;
+            height: auto;
             animation: auto 15s infinite linear;
             animation-delay: 10s;
             position: absolute;
@@ -1458,7 +1461,7 @@
 
         .k2 img {
             width: 750px;
-            height: 440px;
+            height: auto;
             animation: auto 15s infinite linear;
             animation-delay: 15s;
             position: absolute;
@@ -2131,7 +2134,6 @@ height: auto;
             column-gap: 25px;
             justify-content: center;
             justify-items: center;
-            border-radius: 1rem;
             width: auto;
             height: 95px;
             background-color: transparent;
@@ -2264,7 +2266,7 @@ height: auto;
             padding: 20px;
             justify-content: center;
             justify-items: center;
-            background: rgba(212, 211, 211, 0.458);
+            background: rgba(223, 223, 223, 0.458);
             box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
@@ -2285,15 +2287,15 @@ height: auto;
     border: 0.13rem solid rgba(81, 126, 163, 0.969);
     border-left: 0.45rem solid rgba(86, 134, 173, 0.969);
     border-right: 0.45rem solid rgba(86, 134, 173, 0.969);
-    box-shadow: -1px 2px 0.7rem 2px rgba(31, 105, 180, 0.906);
+    box-shadow: -1px 2px 0.5rem 2px rgba(31, 105, 180, 0.906);
 }
 
 .DACA:hover{
-    background: #fff;
+    background: -webkit-linear-gradient(#cb1b1b,#fb4747f4);
     box-shadow: 0 2px 1rem 3px rgba(15, 67, 119, 0.829);
-    transition: 0.17s linear;
-    color:rgb(12, 56, 99);
-    border: 0.13rem solid rgba(73, 127, 175, 0.969);
+    transition: 0.25s linear;
+    color:#fff;
+    border: 0.18rem solid #000;
 }
 
 .DCA{
@@ -3295,6 +3297,10 @@ cursor: pointer;
             color: blue;
         }
 
+        .immi{
+            background: #fff;
+        }
+
         .explanation {
             display: grid;
             grid-template-columns: 1fr;
@@ -3307,7 +3313,7 @@ cursor: pointer;
             width: 405px;
             height: 590px;
             padding: 10px;
-            background: transparent;
+            background: #fff;
         }
 
         .explanation1 {
@@ -3520,10 +3526,10 @@ background: #717171;
             position: relative;
             top: 25px;
             background: #fff;
-            border: 0.1px solid rgba(121, 121, 121, 0.486);
+            border: 0.1px solid rgba(139, 139, 139, 0.486);
             border-bottom: none;
             color: rgba(9, 106, 197, 0.949);
-            box-shadow: 0 1px 0.3rem 0.1px rgba(22, 104, 180, 0.931);
+            box-shadow: 0 1px 0.2rem 0.1px rgba(22, 104, 180, 0.931);
             padding: 7px;
             flex-direction: column;
             justify-content: center;
@@ -3539,7 +3545,6 @@ background: #717171;
         }
 
         .reader:hover{
-            
             transition: 0.45s ease;
         }
 
@@ -3556,9 +3561,6 @@ background: #717171;
             height: 45px;
             padding: 10px;
             cursor: pointer;
-            border: 0.12rem solid transparent;
-            border-radius: 0.25rem;
-            border: 0.12rem solid rgb(253, 84, 23);
         }
 
         .disabled:hover{
@@ -3577,7 +3579,7 @@ background: #717171;
             padding: 10px;
             height: 138px;
             width: 84%;
-            background: rgba(249, 249, 249, 0.472);
+            background: rgba(245, 245, 245, 0.472);
             color: #000;
             margin-top: 4rem;
             box-shadow: 0 1px 0.2rem 1px rgba(134, 190, 242, 0.842);
@@ -3617,7 +3619,7 @@ background: #717171;
             padding: 20px;
             margin-top: 3rem;
             margin-bottom: 1rem;
-            border-bottom: 0.12rem solid rgba(203, 203, 203, 0.964);
+            border: 0.12rem solid rgba(203, 203, 203, 0.964);
            
         }
 
@@ -3629,10 +3631,11 @@ background: #717171;
             font-family: 'arial';
             width: 650px;
             height: 540px;
-            padding: 20px;
+            padding-left: 30px;
+            padding-bottom: 30px;
             border: none;
-            font-size: 15.48px;
-            color: rgb(105, 105, 105);
+            font-size: 15.49px;
+            color: rgba(105, 105, 105, 0.974);
             line-height: 22px;
         }
 
@@ -3684,7 +3687,7 @@ background: #717171;
             justify-items: center;
             width: 360px;
             row-gap: 0.5rem;
-            height: 700px;
+            height: 715px;
             padding: 20px;
             background: #eeeeee;
             font-family: 'Merienda';
@@ -3694,11 +3697,11 @@ background: #717171;
 }
 .NAME{
     width: 300px;
-    height: 600px;
+    height: 650px;
     padding: 20px;
     color: rgb(105, 105, 105);
     font-size: 13.78px;
-    line-height: 20.4px;
+    line-height: 21.5px;
     border-top: 0.7rem solid rgba(110, 133, 204, 0.267);
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -4779,7 +4782,7 @@ function showSlides(n) {
                             </div>
                         </a>
 
-                        <a href="https://en.wikipedia.org/wiki/Saint_Catherine_Street" target="_blank">
+                        <a href="https://www.bonjourquebec.com/fr-ca/repertoire/transport-et-services/rue-sainte-catherine-centre-ville/0t8c" target="_blank">
                             <div class="contentte2">
                                 <figure>
                                     <figcaption style="color: rgba(145, 145, 145, 0.961); font-size: 11px">Sainte Catherine Street</figcaption>
@@ -5591,9 +5594,11 @@ function showSlides(n) {
         <br>
         Sister SUZI. & Family (ZNR-BFASO)
         <br>
+        Sister Felicité & Family (AVV V5-BFSAO)
+        <br>
         Nieces Nema & AMI TIEM. (ZNR-BFASO)
         <br>
-        Nephew Herm. (ZNR-BFASO)
+        Nephew Herm. OUED (ZNR-BFASO)
         <br>
         Ben OUED (ZNR-BFASO)
         <br>
