--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
-  border-top: 0.1rem solid rgb(5, 5, 85);
+  box-shadow: 0 3.5px 0.4rem 1px rgba(24, 72, 148, 0.913);
+  border-top: 0.25rem solid rgba(39, 92, 237, 0.938);
 }
 
         .Photography-content a {
@@ -217,8 +217,8 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
-  border-top: 0.1rem solid rgb(5, 5, 85);
+  box-shadow: 0 3.5px 0.4rem 1px rgba(24, 72, 148, 0.913);
+  border-top: 0.25rem solid rgba(39, 92, 237, 0.938);
    }
 
         .Sport-content a {
@@ -287,10 +287,10 @@
   display: none;
   position: absolute;
   background: #fff;
-  border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
+  box-shadow: 0 3.5px 0.4rem 1px rgba(24, 72, 148, 0.913);
+  border-top: 0.25rem solid rgba(39, 92, 237, 0.938);
   width: 240px;
   height: 155px;
   justify-content: center;
@@ -370,8 +370,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
-  border-top: 0.1rem solid rgb(5, 5, 85);
+  box-shadow: 0 3.5px 0.4rem 1px rgba(24, 72, 148, 0.913);
+  border-top: 0.25rem solid rgba(39, 92, 237, 0.938);
         }
 
         .Promoter-content a {
@@ -446,8 +446,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
-  border-top: 0.1rem solid rgb(5, 5, 85);
+  box-shadow: 0 3.5px 0.4rem 1px rgba(24, 72, 148, 0.913);
+  border-top: 0.25rem solid rgba(39, 92, 237, 0.938);
    }
 
         .Contact-content a {
@@ -523,8 +523,8 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
-  border-top: 0.1rem solid rgb(5, 5, 85);
+  box-shadow: 0 3.5px 0.4rem 1px rgba(24, 72, 148, 0.913);
+  border-top: 0.25rem solid rgba(39, 92, 237, 0.938);
    } 
 
         .Community-content a {
@@ -596,13 +596,13 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
   width: 265px;
   height: 110px;
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  border-top: 0.1rem solid rgb(5, 5, 85);
+  box-shadow: 0 3.5px 0.4rem 1px rgba(24, 72, 148, 0.913);
+  border-top: 0.25rem solid rgba(39, 92, 237, 0.938);
    }
 
         .TikiYiki-content a {
@@ -675,12 +675,12 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
   width: 270px;
   height: 153px;
   justify-content: center;
   align-items: center;
-  border-top: 0.1rem solid rgb(5, 5, 85);
+  box-shadow: 0 3.5px 0.4rem 1px rgba(24, 72, 148, 0.913);
+  border-top: 0.25rem solid rgba(39, 92, 237, 0.938);
   }
 
         .Disability-content a {
