--- a/index.html
+++ b/index.html
@@ -3689,7 +3689,7 @@ background: #717171;
             row-gap: 0.5rem;
             height: 715px;
             padding: 20px;
-            background: #eeeeee;
+            background: #ebebeb;
             font-family: 'Merienda';
             font-size: 16.5px;
             color: gray;
@@ -3699,7 +3699,7 @@ background: #717171;
     width: 300px;
     height: 650px;
     padding: 20px;
-    color: rgb(105, 105, 105);
+    color: rgb(104, 103, 103);
     font-size: 13.78px;
     line-height: 21.5px;
     border-top: 0.7rem solid rgba(110, 133, 204, 0.267);
