--- a/index.html
+++ b/index.html
@@ -2220,9 +2220,10 @@ height: auto;
             justify-items: center;
             padding: 7px;
             line-height: 13px;
-            background-color: transparent;
+            background-color: #fff;
             margin-right: 32%;
             box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            margin-top: -0.35rem;
         }
 
         .envelop-tittle {
@@ -2447,6 +2448,7 @@ height: auto;
             justify-items: center;
             background-color: transparent;
             box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            margin-top: -0.35rem;
         }
 
         .contentt-wrapper {
@@ -2458,7 +2460,7 @@ height: auto;
             width: 380px;
             height: 295px;
             padding: 7px;
-            background-color: transparent;
+            background-color: #fff;
         }
 
         .contentt-wrapped {
@@ -2826,13 +2828,16 @@ cursor: pointer;
         }
 
         .content4y {
+            justify-content: center;
+            align-items: center;
             width: 260px;
             height: 170px;
         }
 
         .content4y img {
-            width: 260px;
-            height: 170px;
+            width: 255px;
+            height: 150px;
+            margin-top: 1.5rem;
         }
 
         .content4y img:hover {
@@ -2857,7 +2862,7 @@ cursor: pointer;
             text-align: center;
             font-family: verdana;
             font-size: 14px;
-            margin-top: -3px;
+            margin-top: -0.8rem;
             margin-left: -2px;
 
         }
