--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         .Photography-content a {
             font-size: 17px;
             float: none;
-            color: #24308d;
+            color: #151e5f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -224,7 +224,7 @@
         .Sport-content a {
             font-size: 16px;
             float: none;
-            color: #24308d;
+            color: #151e5f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -301,7 +301,7 @@
         .Education-content a {
             font-size: 16px;
             float: none;
-            color: #24308d;
+            color: #151e5f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -377,7 +377,7 @@
         .Promoter-content a {
             font-size: 17px;
             float: none;
-            color: #24308d;
+            color: #151e5f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -454,7 +454,7 @@
             width: 73px;
             font-size: 17px;
             float: none;
-            color: #24308d;
+            color: #151e5f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -530,7 +530,7 @@
         .Community-content a {
             font-size: 17px;
             float: none;
-            color: #24308d;
+            color: #151e5f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -608,7 +608,7 @@
         .TikiYiki-content a {
             font-size: 17px;
             float: none;
-            color: #24308d;
+            color: #151e5f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -686,7 +686,7 @@
         .Disability-content a {
             font-size: 17px;
             float: none;
-            color: #24308d;
+            color: #151e5f;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
