--- a/index.html
+++ b/index.html
@@ -3625,6 +3625,7 @@ background: #717171;
             margin-top: 3rem;
             margin-bottom: 1rem;
             border: 0.12rem solid rgba(203, 203, 203, 0.964);
+            background: #fbfbfb;
            
         }
 
