--- a/index.html
+++ b/index.html
@@ -3691,7 +3691,7 @@ background: #717171;
             grid-template-rows: 0.5fr;
             justify-content: center;
             justify-items: center;
-            width: 360px;
+            width: 400px;
             row-gap: 0.5rem;
             height: 715px;
             padding: 20px;
@@ -3702,7 +3702,7 @@ background: #717171;
             text-align: left;
 }
 .NAME{
-    width: 300px;
+    width: 390px;
     height: 650px;
     padding: 20px;
     color: rgb(104, 103, 103);
@@ -5650,9 +5650,9 @@ function showSlides(n) {
      <br>
      MATT (ON-CA)
      <br>
-Friends from Switzerland
+Friends from Switzerland [Ami-es de Suisse]
 <br>
-Friends from France
+Friends from France [Ami-es de France]
 
     </div>
 </div>
