--- a/index.html
+++ b/index.html
@@ -2869,22 +2869,26 @@ cursor: pointer;
 
         .content2y2 {
             width: 265px;
-            height: 177px;
+            height: 180px;
             padding-left: 1px;
-            font-size: 10px;
-            line-height: 10px;
-            background-color: transparent;
+            background-color: #f5f5f5;
             text-align: left;
             padding: 5px;
-            box-shadow: 0 0.4px 0.35rem 0.5px rgb(1, 107, 247);
-            border-radius: 0.4rem;
+            box-shadow: 0 0.4px 0.3rem 0.5px rgb(8, 104, 230);
+            border-radius: 0.2rem;
+            font-family: 'Merienda'; 
+            line-height: 15px; 
+            font-size: 11.5px; 
+            color:rgb(13, 102, 175);
+            text-align: justify;
+            margin-top: 4px;
         }
 
         .content2y2:hover {
-            box-shadow: 0 0.4px 0.5rem 0.5px rgb(0, 95, 220);
-            transition: 0.15s linear;
+            box-shadow: 0 0.5px 0.55rem 1px rgb(20, 62, 118);
+            transition: 0.2s linear;
             padding: 5px;
-            line-height: 10px;
+            font-size: 11.5px; 
             color: #000;
         }
         .contenty3 {
@@ -4686,10 +4690,10 @@ function showSlides(n) {
 
                         <div class="contentyy2">
                             <div class="content2y">
-                                <h3>Welcome in Burkina Faso</h3>
+                                <h4>Welcome in Burkina Faso</h4>
                             </div>
                             <div class="content2y2">
-                                <p style="font-family: 'Merienda'; line-height: 14px; font-size: 12px; text-align: justify;">
+                                <p>
                                     Burkina Faso is a landlocked country localised in the heart of West Africa. Its capital and
                                     main city is Ouagadougou. The population of Burkina Faso is about 23 300 000 inhabitants mainly composed of young people. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                                     agriculture, livestock breeding, mining, market gardening. The informal
