--- a/index.html
+++ b/index.html
@@ -3638,15 +3638,15 @@ background: #717171;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            font-family: 'arial';
+            font-family: 'Barlow Condensed', sans-serif;
             width: 650px;
             height: 540px;
             padding-left: 30px;
             padding-bottom: 30px;
             border: none;
-            font-size: 15.49px;
-            color: rgba(105, 105, 105, 0.974);
-            line-height: 22px;
+            font-size: 18.65px;
+            color: rgba(10, 10, 10, 0.974);
+            line-height: 25px;
         }
 
         .Prom{
@@ -5535,7 +5535,7 @@ function showSlides(n) {
           </a> in which he taught disabled and orphaned children and led several awareness sessions with the focal theme as “Disability and Social Inclusion”.
           <br>
           <br>                    
-          In 2007, 2008, 2013, Gabriel traveled many times to Europe in order to promote the organisation and fundraise money for interesting projects like education and health care. His stays (trips) led him not only in <a href="https://www.geneve.ch/fr" target="_blank">Geneva</a>, <a href="https://www.sion.ch/" target="_blank"> Sion</a>, <a href="https://www.delemont.ch/" target="_blank">Delemont</a>, <a href="http://www.vendlincourt.ch/" target="_blank"> and Vendlincourt</a> in Switzerland with an impactful collaboration of friends and founding members of<a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> 
+          In 2007, 2008, 2013, Gabriel has toured Europe many times in order to promote the organisation and fundraise money for interesting projects like education and health care. His stays (trips) led him not only in <a href="https://www.geneve.ch/fr" target="_blank">Geneva</a>, <a href="https://www.sion.ch/" target="_blank"> Sion</a>, <a href="https://www.delemont.ch/" target="_blank">Delemont</a>, <a href="http://www.vendlincourt.ch/" target="_blank"> and Vendlincourt</a> in Switzerland with an impactful collaboration of friends and founding members of<a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> 
            Transport Handicap in the canton of Valais</a> but also in Germany at<a href=" https://fr.wikipedia.org/wiki/Rastatt" target="_blank"> Rasttat</a> and <a href="https://fr.wikipedia.org/wiki/Kuppenheim" target="_blank"> Kuppenheim</a> in <a href="https://fr.wikipedia.org/wiki/Bade-Wurtemberg" target="_blank"> the lander of Bade-Wurtemberg [Baden-Württemberg] </a> where he host a serie of conferences about PAAS NEERE the organisation of which he was president.
         
          <br>
