--- a/index.html
+++ b/index.html
@@ -3644,10 +3644,10 @@ background: #717171;
             padding-left: 30px;
             padding-bottom: 30px;
             border: none;
-            font-size: 17.65px;
-            color: rgb(79, 79, 79);
+            font-size: 17.6px;
+            color: rgba(82, 82, 82, 0.887);
             word-spacing: 1px;
-            line-height: 24px;
+            line-height: 22.5px;
             opacity: 0.99;
         }
 
