--- a/index.html
+++ b/index.html
@@ -3645,7 +3645,7 @@ background: #717171;
             padding-bottom: 30px;
             border: none;
             font-size: 17.6px;
-            color: rgba(82, 82, 82, 0.887);
+            color: rgb(76, 76, 76);
             word-spacing: 1px;
             line-height: 22.5px;
             opacity: 0.99;
