--- a/index.html
+++ b/index.html
@@ -3562,7 +3562,7 @@ background: #717171;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            color: rgba(7, 74, 125, 0.988);
+            color:#18a5d8fa;
             font-size: 19px;
             font-family: 'arial black';
             width: 100%;
@@ -3572,7 +3572,7 @@ background: #717171;
         }
 
         .disabled:hover{
-            color:#1f3278;
+            color: rgba(7, 74, 125, 0.988);
             transition: 0.2s linear;
             border-radius: 0.5rem;
             background: #fff;
@@ -3645,7 +3645,7 @@ background: #717171;
             padding-bottom: 30px;
             border: none;
             font-size: 17.6px;
-            color: rgb(76, 76, 76);
+            color: rgb(75, 75, 75);
             word-spacing: 1px;
             line-height: 22.5px;
             opacity: 0.99;
