--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         }
 
         .navbar:hover .Photography:hover .dropbtn {
-            border: 0.1px solid rgb(255, 140, 17);
+            border: 0.1px solid #fff;
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
@@ -198,7 +198,7 @@
         }
 
         .navbar:hover .Sport:hover .dropbtn {
-            border: 0.1px solid rgb(255, 140, 17);
+            border: 0.1px solid #fff;
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
@@ -274,7 +274,7 @@
         }
 
         .navbar:hover .Education:hover .dropbtn {
-            border: 0.1px solid rgb(255, 140, 17);
+            border: 0.1px solid #fff;
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
@@ -350,7 +350,7 @@
         }
 
         .navbar:hover .Promoter:hover .dropbtn {
-            border: 0.1px solid rgb(255, 140, 17);
+            border: 0.1px solid #fff;
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
@@ -426,7 +426,7 @@
         }
 
         .navbar:hover .Contact:hover .dropbtn {
-            border: 0.1px solid rgb(255, 140, 17);
+            border: 0.1px solid #fff;
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
@@ -503,7 +503,7 @@
         }
 
         .navbar:hover .Community:hover .dropbtn {
-            border: 0.1px solid rgb(255, 140, 17);
+            border: 0.1px solid #fff;
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
@@ -580,7 +580,7 @@
         }
 
         .navbar:hover .TikiYiki:hover .dropbtn {
-            border: 0.1px solid rgb(255, 140, 17);
+            border: 0.1px solid #fff;
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
@@ -659,7 +659,7 @@
         }
 
         .navbar:hover .Disability:hover .dropbtn {
-            border: 0.1px solid rgb(255, 140, 17);
+            border: 0.1px solid #fff;
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
