--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         
         .navbar {
             background: rgba(5, 13, 53, 0.962);
-            height: 58px;
+            height: 55px;
             object-fit: cover;
             z-index: 1;
             top: 0;
@@ -117,7 +117,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 14px 8px;
+            padding: 12px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -126,9 +126,9 @@
         .navbar:hover .Photography:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
             color: yellow;
-            transition: 0.25s ease;
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.899);
+            transition: 0.35s ease;
             cursor: pointer;
             background: rgba(15, 15, 156, 0.55);
         }
@@ -191,7 +191,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 14px 8px;
+            padding: 12px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -200,9 +200,9 @@
         .navbar:hover .Sport:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.899);
+            transition: 0.35s ease;
             color: yellow;
-            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(15, 15, 156, 0.55);
         }
@@ -267,7 +267,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 14px 8px;
+            padding: 12px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -276,9 +276,9 @@
         .navbar:hover .Education:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.899);
+            transition: 0.35s ease;
             color: yellow;
-            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(15, 15, 156, 0.55);
         }
@@ -343,7 +343,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 14px 8px;
+            padding: 12px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -352,9 +352,9 @@
         .navbar:hover .Promoter:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.899);
+            transition: 0.35s ease;
             color: yellow;
-            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(15, 15, 156, 0.55);
         }
@@ -419,7 +419,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 14px 8px;
+            padding: 12px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -428,9 +428,9 @@
         .navbar:hover .Contact:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.899);
+            transition: 0.35s ease;
             color: yellow;
-            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(15, 15, 156, 0.55);
         }
@@ -496,7 +496,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 14px 8px;
+            padding: 12px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -505,9 +505,9 @@
         .navbar:hover .Community:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.899);
+            transition: 0.35s ease;
             color: yellow;
-            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(15, 15, 156, 0.55);
         }
@@ -572,7 +572,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 14px 8px;
+            padding: 12px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -582,9 +582,9 @@
         .navbar:hover .TikiYiki:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.899);
+            transition: 0.35s ease;
             color: yellow;
-            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(15, 15, 156, 0.55);
         }
@@ -652,7 +652,7 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 14px 8px;
+            padding: 12px 8px;
             border: 0.1px solid transparent;
             border-top: none;
             border-bottom: 0.25rem solid transparent;
@@ -661,9 +661,9 @@
         .navbar:hover .Disability:hover .dropbtn {
             border: 0.1px solid #fff;
             border-top: none;
-            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.825);
+            border-bottom: 0.25rem solid rgba(0, 251, 255, 0.899);
+            transition: 0.35s ease;
             color: yellow;
-            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(15, 15, 156, 0.55);
         }
@@ -3629,7 +3629,7 @@ background: #717171;
             margin-bottom: 1rem;
             border-radius: 0.5rem;
             border: 0.12rem solid rgba(212, 212, 212, 0.964);
-            background: #fefefefc;
+            background: #fefefef3;
            
         }
 
@@ -3638,14 +3638,14 @@ background: #717171;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            font-family: 'Barlow Condensed', sans-serif;
+            font-family: 'Merienda';
             width: 650px;
             height: 600px;
             padding-left: 30px;
             padding-bottom: 30px;
             border: none;
-            font-size: 17px;
-            color: rgb(64, 64, 70);
+            font-size: 14px;
+            color: rgb(83, 83, 89);
             word-spacing: 1px;
             line-height: 22.5px;
             opacity: 0.99;
