--- a/index.html
+++ b/index.html
@@ -3639,14 +3639,14 @@ background: #717171;
             justify-content: center;
             justify-items: center;
             font-family: 'Merienda';
-            width: 650px;
+            width: 645px;
             height: 600px;
             padding: 7px;
             border: none;
-            font-size: 14px;
-            color: rgba(54, 54, 119, 0.938);
+            font-size: 13px;
+            color: rgb(84, 84, 172);
             word-spacing: 1px;
-            line-height: 22px;
+            line-height: 23.7px;
             opacity: 0.99;
         }
 
@@ -3656,7 +3656,7 @@ background: #717171;
             justify-content: space-between;
             row-gap: 1rem;
             justify-items: center;
-            width: 460px;
+            width: 480px;
             height: auto;
             padding: 10px;
         }
@@ -5524,7 +5524,7 @@ function showSlides(n) {
         high school. 
         He holds a Patent of Undergraduate Studies (P.U.S) called B.E.P.C [Brevet d'Etude du Premier Cycle].
         <br>
-        As a fervent defender of Disability Rights, Gabriel knew he has to get involved in many activities about disablity and connected matters in finding out, structuring and implementing practically ideas that could drive to more social inclusion. Ideas are diverse, complexe but the ideas linked to disability are focal subjects of interest for him. 
+        As a fervent defender of Disability Rights, Gabriel knew he has to get involved in many activities about disablity and corollary matters on implementing ideas into practical realisations that can positively change lives. Some ideas are common, complexe and may be deep-thinking but ideas tied frontally to disability and their rights are main subjects of interest for Gabriel. 
          <br>
           <br>
         The need to get results in terms of social impacts for disabled people and also to the whole communities where they are living, is a huge cause that sharpened the dynamism of Gabriel.
