--- a/index.html
+++ b/index.html
@@ -1576,7 +1576,7 @@
             padding-top: 5px;
             border-top: 0.2px solid #9d9d9d7c;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
         }
 
         .content1 a:hover {
@@ -1647,7 +1647,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
         }
 
         .content2 a:hover {
@@ -1719,7 +1719,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
         }
 
         .content3 a:hover {
@@ -1789,7 +1789,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
         }
 
         .content4 a:hover {
@@ -1859,7 +1859,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
         }
 
         .content5 a:hover {
@@ -1969,7 +1969,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
         }
 
         .content6 a:hover {
@@ -2039,7 +2039,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
         }
 
         .content7 a:hover {
@@ -2202,7 +2202,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 20px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
         }
 
         .content8:hover{    
@@ -2609,7 +2609,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
         }
 
         .content9a img {
@@ -2672,7 +2672,7 @@ height: auto;
             font-family: 'Merienda';
             font-size: 15.75px;
             color: rgb(42, 40, 42);
-            box-shadow: 0 0 0.5rem 0.5px rgb(108, 161, 246);
+            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
 
         }
 .Bmap{
@@ -2913,7 +2913,7 @@ cursor: pointer;
             height: 410px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
         }
 
         .C {
@@ -3642,11 +3642,10 @@ background: #717171;
             height: 500px;
             padding: 7px;
             border: none;
-            font-size: 13px;
-            color: rgb(78, 78, 159);
+            font-size: 13.55px;
+            color: rgb(1, 2, 14);
             word-spacing: 1px;
-            line-height: 23.7px;
-            opacity: 0.99;
+            line-height: 23.6px;
         }
 
         .Prom{
