--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
@@ -1576,7 +1577,7 @@
             padding-top: 5px;
             border-top: 0.2px solid #9d9d9d7c;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
+            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content1 a:hover {
@@ -1647,7 +1648,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content2 a:hover {
@@ -1719,7 +1720,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content3 a:hover {
@@ -1789,7 +1790,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content4 a:hover {
@@ -1859,7 +1860,7 @@
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content5 a:hover {
@@ -1969,7 +1970,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content6 a:hover {
@@ -2039,7 +2040,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content7 a:hover {
@@ -2202,7 +2203,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 20px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content8:hover{    
@@ -2609,7 +2610,7 @@ height: auto;
             padding-right: 5px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .content9a img {
@@ -2672,7 +2673,7 @@ height: auto;
             font-family: 'Merienda';
             font-size: 15.75px;
             color: rgb(42, 40, 42);
-            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
+            box-shadow: 0 0 0.5rem 0.5px rgb(108, 161, 246);
 
         }
 .Bmap{
@@ -2913,7 +2914,7 @@ cursor: pointer;
             height: 410px;
             padding-top: 5px;
             border-bottom: 0.2px solid #9d9d9d7c;
-            box-shadow: -1px 0 0.5rem 0.5px rgb(36, 65, 112);
+            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
         .C {
@@ -3621,14 +3622,15 @@ background: #717171;
             grid-template-columns: 1.5fr 0.5fr;
             justify-content: center;
             justify-items: center;
-            column-gap: 0.5rem;
+            column-gap: 1rem;
             width: 84%;
             height: auto;
             padding: 20px;
             margin-top: 2.5rem;
             margin-bottom: 1rem;
             border-radius: 0.5rem;
-            background: #f9f9f9fa;
+        
+            background: #fdfdfdf3;
            
         }
 
@@ -3638,14 +3640,15 @@ background: #717171;
             justify-content: center;
             justify-items: center;
             font-family: 'Merienda';
-            width: 600px;
-            height: 500px;
+            width: 645px;
+            height: 600px;
             padding: 7px;
             border: none;
-            font-size: 13.5px;
-            color: rgb(57, 68, 189);
+            font-size: 13px;
+            color: rgb(37, 68, 163);
             word-spacing: 1px;
-            line-height: 21.5px;
+            line-height: 23px;
+            opacity: 0.99;
         }
 
         .Prom{
