--- a/index.html
+++ b/index.html
@@ -5700,6 +5700,7 @@ function showSlides(n) {
                      <br>
                      MATT (ON-CA)
                      <br>
+                     <h3>EUROPE</h3>
                 Friends from Switzerland [Ami-es de Suisse]
                 <br>
                 Friends from France [Ami-es de France]
