--- a/index.html
+++ b/index.html
@@ -5540,11 +5540,11 @@ function showSlides(n) {
         high school. 
         He holds a Patent of Undergraduate Studies (P.U.S) called B.E.P.C [Brevet d'Etude du Premier Cycle].
         <br>
-        As a fervent defender of Disability Rights, Gabriel knew he has to get involved in many activities about disablity and corollary matters on implementing ideas into practical realisations that can positively change lives. Some ideas are common, complexe and may be deep-thinking but ideas tied frontally to disability and their rights are main subjects of interest for Gabriel. 
+        As a fervent defender of Disability Rights, Gabriel knew he has to get involved in many activities about disablity and corollary matters on implementing ideas into practical realisations that can positively change lives. Some ideas are common even complexe and may deep-thinking but ideas linked frontally to disability and their rights are main subjects of interest for Gabriel. 
          <br>
           <br>
         The need to get results in terms of social impacts for disabled people and also to the whole communities where they are living, is a huge cause that sharpened the dynamism of Gabriel.
-        It is a way to promote, defend and protect Disability Rights, especially the right to get educated no matter who you are.
+        This a way to promote, defend and protect Disability Rights and legacies disabled activists have reached, especially the right to get educated no matter who you are.
    
     </p>
         
