--- a/index.html
+++ b/index.html
@@ -3653,7 +3653,7 @@ background: #717171;
             padding: 7px;
             border: none;
             font-size: 15.66px;
-            color: rgb(54, 81, 162);
+            color: rgb(38, 71, 154);
             word-spacing: 1px;
             line-height: 23.35px;
             margin-top: 0.55rem;
@@ -5544,7 +5544,7 @@ function showSlides(n) {
          <br>
           <br>
         The need to get results in terms of social impacts for disabled people and also to the whole communities where they are living, is a huge cause that sharpened the dynamism of Gabriel.
-        This a way to promote, defend and protect Disability Rights and legacies disabled activists have reached, especially the right to get educated no matter who you are.
+        This is a way to promote, defend and protect Disability Rights and legacies disabled activists have reached, especially the right to get educated no matter who you are.
    
     </p>
         
