--- a/index.html
+++ b/index.html
@@ -2278,7 +2278,7 @@ height: auto;
     display: grid;
     grid-template-columns: 0.45fr 1fr;
     column-gap: 0.3rem;
-    background: rgba(217, 217, 217, 0.6);
+    background: rgba(217, 217, 217, 0.67);
     display: grid;
     justify-content: space-between;
     justify-items: center;
@@ -2338,21 +2338,21 @@ height: auto;
             }
 
         .NADA{
-            background: #fdfdfd;
+            background: #fafafafc;
             display: grid;
             grid-template-columns: 60px 95px;
             width: 200px;
             height: 77px;
             border-radius: 0.5rem;
-            border: 0.12rem solid rgba(33, 38, 137, 0.906);
+            border: 0.11rem solid rgba(36, 42, 149, 0.906);
             box-shadow: 2px 1px 0.45rem 2px rgba(20, 26, 111, 0.751);
             justify-content: space-between;
             justify-items: center;
             padding-top: 20px; 
             padding-bottom: 20px;
-            font-family: 'Merienda';
-            font-size: 12px;
-            color:rgb(4, 6, 42);
+            font-family: 'Kanit';
+            font-size: 13px;
+            color:rgb(0, 0, 6);
         }
 
         .NAD{
@@ -2384,7 +2384,7 @@ height: auto;
             box-shadow: 0 6px 0.85rem 6px rgba(6, 11, 45, 0.924);
             color: #000;
             transition: 0.19s ease-in;
-            font-size: 12px;
+            font-size: 13px;
         }
 
         .NADO{
@@ -2400,8 +2400,8 @@ height: auto;
             box-shadow: 2px 1px 0.45rem 2px rgba(20, 26, 111, 0.751);
             padding-top: 20px; 
             padding-bottom: 20px;
-            background: #fff;
-            font-family: 'Merienda';
+            background: #fafafafc;
+            font-family: 'Kanit';
             font-size: 17px;
             color:rgb(52, 59, 157);
         }
@@ -3654,10 +3654,10 @@ background: #717171;
             height: auto;
             padding: 7px;
             border: none;
-            font-size: 16.5px;
+            font-size: 17px;
             color: rgb(38, 71, 152);
             word-spacing: 1px;
-            line-height: 23.35px;
+            line-height: 24px;
             margin-top: 0.55rem;
             
         }
@@ -3719,10 +3719,9 @@ background: #717171;
             padding: 10px;
             background: transparent;
             font-family: 'Kanit';
-            font-size: 15px;
-            color: darkblue;
+            font-size: 16px;
+            color: rgb(7, 7, 98);
             text-align: left;
-            opacity: 0.99;
             margin-bottom: 1.5rem;
 }
 
@@ -4483,8 +4482,8 @@ function showSlides(n) {
                 </div>
 
                 <div class="FASOTITLE">
-                <p><b><em style="font-family: 'arial black'; color:rgb(214, 41, 18)">Burkina Faso</em>, the land of integrity, a landlocked and low-income Sub-Saharan African country with limited natural resources, is administratively structured of <em style="font-family: 'arial black'; color:rgb(214, 41, 18)">45 provinces </em>and nested within the heart of <em style="font-family: 'arial black'; color:rgb(214, 18, 214)">West Africa</em>. Burkina Faso was a former colony of France from which it gained (took) independence in August 5th, 1960. 
-                    <em style="font-family: 'arial black'; color:rgb(214, 41, 18)">Its capital and main city is Ouagadougou</em> populated by 1.086.505 people in the city area. The global <em style="font-family: 'arial black'; color:green;"> population of Burkina Faso is about 23 300 000 inhabitants</em> with a dominant percentage of youth. Geography influences Economy. The economy of Burkina Faso is mostly based on
+                <p><b><em style="font-family: 'arial black'; color: rgb(214, 41, 18);">Burkina Faso</em>, the land of integrity, a landlocked and low-income Sub-Saharan African country with limited natural resources, is administratively structured of <em style="font-family: 'arial black'; color:green">45 provinces </em>and nested within the heart of <em style="font-family: 'arial black'; color:rgb(214, 41, 18)">West Africa</em>. Burkina Faso was a former colony of France from which it gained (took) independence in August 5th, 1960. 
+                    <em style="font-family: 'arial black'; color: rgb(214, 41, 18)">Its capital and main city is Ouagadougou</em> populated by 1.086.505 people in the city area. The global <em style="font-family: 'arial black'; color:green;"> population of Burkina Faso is about 23 300 000 inhabitants</em> with a dominant percentage of youth. Geography influences Economy. The economy of Burkina Faso is mostly based on
                 agriculture, livestock breeding, mining, market gardening. The informal
                 sector is growing and believed to create more jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé but no a plural mark with 'S' even if it is at least two inhabitants.  
                 </b>    
@@ -5550,7 +5549,7 @@ function showSlides(n) {
         high school. 
         He holds a Patent of Undergraduate Studies (P.U.S) called B.E.P.C [Brevet d'Etude du Premier Cycle].
         <br>
-        As a fervent defender of Disability Rights, Gabriel knew he has to stand up and get involved within activities about disablity and corollary matters by implementing ideas into practical realisations that can positively change lives. That's why he initiated the Centre PAAS NEERE for EDUCATION in 2005. Ideas are sometimes common even complexe and deep-thinking, but those linked frontally to disability and rights, are main subjects of interest for Gabriel. 
+        As a fervent defender of Disability Rights, Gabriel knew he has to stand up and get involved within activities about disablity and corollary matters by implementing ideas into practical realisations that can positively change lives. That's why he initiated the Centre PAAS NEERE for EDUCATION in 2006. Ideas are sometimes common even complexe and deep-thinking, but those linked frontally to disability and rights, are main subjects of interest for Gabriel. 
          <br>
           <br>
         The need to get results in terms of social impacts for disabled people and to the communities where they are living, is a huge focus that sharpens the dynamism of Gabriel.
